--- a/src/tourist-site/assets/style.css
+++ b/src/tourist-site/assets/style.css
@@ -1,11 +1,20 @@
+body {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+}
+
+
 /*** Section Title ***/
+
 .section-title {
     position: relative;
     display: inline-block;
     text-transform: uppercase;
 }
 
+
 /*** Destination ***/
+
+
 /* .destination img {
     transition: .5s;
 }
@@ -16,6 +25,7 @@
 
 
 /* Button radiu */
+
 .buttonRadiusLeft {
     border-radius: 30px 0 0 30px;
 }
@@ -24,14 +34,17 @@
     border-radius: 0 30px 30px 0;
 }
 
+
 /* Testimonial */
-.imgSize: {
+
+.imgSize {
     /* width: 80px; height: 80px; */
     width: 150px;
 }
 
 
 /*** Testimonial ***/
+
 .testimonial-carousel::before {
     position: absolute;
     content: "";
