protected routes, login and registration...

--- a/src/tourist-site/assets/style.css
+++ b/src/tourist-site/assets/style.css
@@ -2,6 +2,14 @@ body {
     font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
+.dropdown-menu.show {
+    left: auto;
+    right: -33px;
+}
+
+.form-floating>.form-control:not(:placeholder-shown)~label{
+    transform: scale(0.85) translateY(-1.5rem) translateX(0.15rem);
+}
 
 /*** Section Title ***/
 
