Code refactor: no more modal for new posts/tours. Instead they are pages

--- a/src/admin-panel/assets/style.scss
+++ b/src/admin-panel/assets/style.scss
@@ -7,3 +7,8 @@ a {
   min-height: 150px;
   overflow: auto;
 }
+
+.MuiButtonBase-root.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
+  padding: 0;
+  min-width: 0;
+}
