--- a/src/tourist-site/assets/style.css
+++ b/src/tourist-site/assets/style.css
@@ -106,6 +106,7 @@ body {
 .img-card {
     max-width: auto;
     height: 300px;
+    width: 100%;
 }
 /*** Destination ***/
 
@@ -143,7 +144,7 @@ body {
 
 /*** Booking ***/
 .booking {
-    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/booking.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(/img/booking.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
